# Student_Mental_Health

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt  test_apriori.py  test_preprocessing.py
StudentMentalHealth/: Procfile  db.sqlite3  manage.py  requirements.txt  script.py
StudentMentalHealth/StudentMentalHealth/: asgi.py  settings.py  urls.py  wsgi.py
StudentMentalHealth/core/: admin.py  apps.py  inference.py  models.py  urls.py  views.py
StudentMentalHealth/core/migrations/: 0001_initial.py  0002_alter_survey_id.py  0003_alter_survey_id.py  0004_alter_predictionresult_id_and_more.py
StudentMentalHealth/core/templates/: admin_dashboard.html  base.html  import_csv.html  login.html  result.html  student_detail.html  survey_analytics.html  survey_details.html  survey_form.html  survey_list.html
StudentMentalHealth/core/templates/partials/: detail_row.html  drow.html
StudentMentalHealth/outputs/: association_rules.csv  bin_encoders.pkl  feature_template.csv  frequent_itemsets.csv  test_preprocessing.py
construction/: visualize.py
data/raw/: association_rules.csv  depression_rules.csv  features_enriched.csv  frequent_itemsets.csv
external_library/: rule_filter.py
outputs/: association_rules.csv  bin_encoders.pkl  depression_rules.csv  features_enriched.csv  frequent_itemsets.csv  lr.pkl  metrics.json
src/: preprocessing.py
src/models/: evaluate.py  train_models.py
tests/: test.py  test_inferences.py
transaction_encoding/: apriori_engine.py
