[project]
name = "student-mental-health"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "huggingface-hub>=1.9.0",
    "joblib>=1.5.3",
    "matplotlib>=3.7.0",
    "mlxtend>=0.22.0",
    "networkx>=3.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "shap>=0.51.0",
    "shortuuid>=1.0.13",
]
